--- a/templates/notebook.html
+++ b/templates/notebook.html
@@ -352,5 +352,5 @@ data-notebook-path="{{notebook_path | urlencode}}"
 {% else %}
     <script src="{{ static_url("notebook/js/main.min.js") }}" type="text/javascript" charset="utf-8"></script>
 {% endif %}
-
+{% include "notebook_footer.html" %}
 {% endblock %}
