--- a/templates/page.html
+++ b/templates/page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>{% block title %}IPython Notebook{% endblock %}</title>
+    <title>{% block title %}Python Course Notebook{% endblock %}</title>
     {% block favicon %}<link rel="shortcut icon" type="image/x-icon" href="{{static_url("base/images/favicon.ico") }}">{% endblock %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="{{static_url("components/jquery-ui/themes/smoothness/jquery-ui.min.css") }}" type="text/css" />
@@ -126,42 +126,6 @@
 </div>
 
 
-<!--Footer-->
-<div class="footerBott">
-    <div class="row">
-
-    <div class="large-8 columns footerMenu">
-        <ul id="footerNav">
-            <li><a href="http://www.python.cyscorpions.com">Courses</a></li>
-            <li><a href="https://github.com/KLabCyscorpions/python-course">Github</a></li>
-            <li><a href="https://www.facebook.com/Cyscorpions">Facebook</a></li>
-            <li><a href="https://twitter.com/klabcyscorpions">Twitter</a></li>
-            <li><a href="https://instagram.com/klabcyscorpions/">Instagram</a></li>
-            <li><a href="http://www.cyscorpions.com">KLab Cyscorpions</a></li>
-        </ul>
-    </div>
-
-    <div class="large-3 columns copyright">
-        <p> 
-            <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" height'9' width='50'/></a>
-            | © 2016 KLab Cyscorpions, Philippines  
-        </p>
-    </div>
-
-    <div class="large-3 columns">
-    <div class="powered by">
-
-    {% block jup_logo %} 
-
-        <a href ='/'></a>
-    {% endblock %}
-
-    </div>  
-    </div>
-
-    </div>
-</div>
-
 <div id="site">
 {% block site %}
 {% endblock %}
@@ -173,6 +137,7 @@
 {% block script %}
 {% endblock %}
 
+{% include "ga.html" %}
 </body>
 
 </html>
