--- a/templates/notebook_footer.html
+++ b/templates/notebook_footer.html
@@ -4,7 +4,7 @@
 
     <div class="large-8 columns footerMenu">
         <ul id="footerNav">
-            <li><a href="http://www.python.cyscorpions.com" target="_blank">Courses</a></li>
+            <li><a href="http://python.cyscorpions.com" target="_blank">Courses</a></li>
             <li><a href="https://github.com/KLabCyscorpions/python-course" target="_blank">Github</a></li>
             <li><a href="https://www.facebook.com/Cyscorpions" target="_blank">Facebook</a></li>
             <li><a href="https://twitter.com/klabcyscorpions" target="_blank">Twitter</a></li>
