--- a/static/custom/custom.css
+++ b/static/custom/custom.css
@@ -73,20 +73,10 @@
     padding: 40px 0;
     width: 100%;
     height: 120px;
-    position: fixed;
     bottom: 0;
     left: 0;
     text-align: center; 
-}
-
-.notebook_footer {
-    background-color: #1d2528; 
-    padding: 40px 0;
-    width: 100%;
-    height: 120px;
-    bottom: 0;
-    left: 0;
-    text-align: center; 
+    display:block;
 }
 
 .footerSpace {
