--- a/templates/notebook.html
+++ b/templates/notebook.html
@@ -322,7 +322,10 @@ data-notebook-path="{{notebook_path | urlencode}}"
     <div id="notebook_panel">
         <div id="notebook"></div>
         <div id='tooltip' class='ipython_tooltip' style='display:none'></div>
+    {% include "footer.html" %}
     </div>
+
+
 </div>
 
 
@@ -352,5 +355,5 @@ data-notebook-path="{{notebook_path | urlencode}}"
 {% else %}
     <script src="{{ static_url("notebook/js/main.min.js") }}" type="text/javascript" charset="utf-8"></script>
 {% endif %}
-{% include "notebook_footer.html" %}
+
 {% endblock %}
