--- a/templates/tree.html
+++ b/templates/tree.html
@@ -162,6 +162,7 @@ data-terminals-available="{{terminals_available}}"
       </div><!-- class:tab-content -->
     </div><!-- id:tab_content --> 
   </div><!-- ipython-main-app  -->
+{% include "footer.html" %}
 {% endblock %}
 
 {% block script %}
