Updated HTML Title

--- a/templates/page.html
+++ b/templates/page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>{% block title %}Python Course Notebook{% endblock %}</title>
+    <title>{% block title %}KLab Cyscorpions Python Course{% endblock %}</title>
     {% block favicon %}<link rel="shortcut icon" type="image/x-icon" href="{{static_url("base/images/favicon.ico") }}">{% endblock %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="{{static_url("components/jquery-ui/themes/smoothness/jquery-ui.min.css") }}" type="text/css" />
