--- a/templates/tree.html
+++ b/templates/tree.html
@@ -1,6 +1,6 @@
 {% extends "page.html" %}
 
-{% block title %}{{page_title}}{% endblock %}
+{-% block title %}{{page_title}}{% endblock %-}
 
 
 {% block params %}
